--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/e9aa42ecda.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -63,13 +67,196 @@
         </div>
 
         <!-- Header 2nd part -->
-        <div class="container">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-7 col-sm-12">
+                    <h6>AUTHOR: DAILY TUTION</h6>
+                    <h1>EXCTING ADVENTURE</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quo harum eveniet quos beatae
+                        voluptate. Repellat tenetur quibusdam tempore asperiores.</p>
+                    <button class="btn btn-light px-5 py-2">By now for $5.99</button>
+                </div>
+                <div class="col-md-5 col-sm-12 h-25">
+                    <img src="../assets/header-img.png" alt="Books">
+                </div>
+            </div>
 
         </div>
     </header>
 
-    <!-- main part of the site -->
+    <!-- Body of the Site -->
     <main>
+
+        <!-- Body of the Site: 1st PART -->
+
+        <section class="section-1">
+            <div class="container center-text">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="pray">
+                            <img src="../assets/pexels-photo-1904769.jpeg" alt="Pray">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="panel text-left">
+                            <h1>Mr. David Smith</h1>
+                            <p class="pt-4">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis voluptatem
+                                temporibus numquam, iste sint laudantium at doloremque voluptates facere? Error fugiat
+                                quas aut voluptas totam ipsam voluptatem amet necessitatibus repellendus?
+                            </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod amet repellendus optio
+                                possimus, molestiae harum velit deleniti mollitia ratione enim natus aut obcaecati
+                                ullam, sint placeat. Tempore dolore, accusantium soluta officiis nihil fugit minus quo
+                                rerum, reiciendis laudantium eligendi nobis sequi, quibusdam commodi in minima
+                                repellendus veniam quaerat sed! Modi.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Body of the Site: 2nd PART -->
+
+        <section class="section-2 container-fluid p-0">
+            <div class="cover">
+                <div class="content text-center">
+                    <h1>Some Features That Made Us Unique</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, accusantium?</p>
+                </div>
+            </div>
+
+            <div class="container-fluid text-center">
+                <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
+                    <div class="rect">
+                        <h1>2345</h1>
+                        <p>Happy Client</p>
+                    </div>
+                    <div class="rect">
+                        <h1>6784</h1>
+                        <p>Cups Coffee</p>
+                    </div>
+                    <div class="rect">
+                        <h1>1056</h1>
+                        <p>Tickets Submitted</p>
+                    </div>
+                    <div class="rect">
+                        <h1>9125</h1>
+                        <p>Total Projects</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="purchase text-center">
+                <h1>Purchase Whatever You Want</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                <!-- Class "cards" is an custom class and the following class "card" is a bootstrap class -->
+                <!-- First Card  -->
+                <div class="cards">
+                    <div class="d-flex flex-row justify-content-center flex-wrap">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">PDF</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$77.99</h1>
+                                    <a href="#" class="btn btn-dark px-5 py-2 mb-5">Purchase Now</a>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- Second Card  -->
+                <div class="cards">
+                    <div class="d-flex flex-row justify-content-center flex-wrap">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">Ebook</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$99.99</h1>
+                                    <a href="#" class="btn btn-dark px-5 py-2 mb-5">Purchase Now</a>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- Third Card  -->
+                <div class="cards">
+                    <div class="d-flex flex-row justify-content-center flex-wrap">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">Print Copy</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$58.99</h1>
+                                    <a href="#" class="btn btn-dark px-5 py-2 mb-5">Purchase Now</a>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Body of the Site: 3rd PART -->
+        
+        <section class="section-3 container-fluid p-0 text-center">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <h1>Download Our App For All Platforms</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum sed numquam expedita eius iure eaque explicabo enim, dolores totam nemo consequatur? Officiis dolorem, accusamus eum inventore reiciendis ut totam quaerat in fugiat incidunt deleniti! Quis, velit modi repudiandae magnam temporibus odit omnis fugit impedit placeat ea necessitatibus itaque saepe officiis laudantium? Tempore velit, minus et dicta dolore necessitatibus sint recusandae!</p>
+                </div>
+            </div>
+
+            <div class="platform row">
+                <div class="col-md-6 col-sm-12 text-right">
+                    <div class="desktop shadow-lg">
+                        <div class="d-flex flex-row justify-content-center">
+                            <i class="fa-solid fa-desktop fa-3x py-2 py-3"></i>
+                            <div class="text text-left">
+                                <h1 class="pt-1 m-0">Desktop</h1>
+                                <p class="p-0 m-0">On Website</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-12 text-left">
+                    <div class="desktop shadow-lg">
+                        <div class="d-flex flex-row justify-content-center">
+                            <i class="fa-solid fa-mobile-alt fa-3x py-2 py-3"></i>
+                            <div class="text text-left">
+                                <h1 class="pt-1 m-0">On Mobile</h1>
+                                <p class="p-0 m-0">On PlayStore</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
