--- a/src/index.html
+++ b/src/index.html
@@ -221,15 +221,14 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum sed numquam expedita eius iure
                         eaque explicabo enim, dolores totam nemo consequatur? Officiis dolorem, accusamus eum inventore
                         reiciendis ut totam quaerat in fugiat incidunt deleniti! Quis, velit modi repudiandae magnam
-                        temporibus odit omnis fugit impedit placeat ea necessitatibus itaque saepe officiis laudantium?
-                        Tempore velit, minus et dicta dolore necessitatibus sint recusandae!</p>
+                        temporibus odit omnis fugit impedit placeat ea necessitatibus! </p>
                 </div>
             </div>
 
             <div class="platform row">
                 <div class="col-md-6 col-sm-12 text-right">
                     <div class="desktop shadow-lg">
-                        <div class="d-flex flex-row justify-content-center">
+                        <div class=" d-flex flex-row justify-content-center">
                             <i class="fa-solid fa-desktop fa-3x py-2 py-3"></i>
                             <div class="text text-left">
                                 <h1 class="pt-1 m-0">Desktop</h1>
@@ -250,6 +249,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
 
