--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <script src="https://kit.fontawesome.com/e9aa42ecda.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile-style.css">
     <title>Document</title>
 </head>
 
@@ -26,7 +27,7 @@
                         <i class="fas fa-book-reader fa-3x mx-3"></i> Books</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <i class="fas fa-align-right text-light"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <div class="me-auto"></div>
@@ -269,7 +270,7 @@
                 <div class="col-md-4 col-12 text-center">
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="../assets/UI-face-3.jpg" alt="Member" class="img-fluid">
+                            <img src="../assets/UI-face-3.jpg" alt="Member" class="img-fluid border-radius p-4">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Adam Jones</h3>
@@ -293,7 +294,8 @@
 
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="../assets/UI-face-1.jpg" alt="Member" class="img-fluid">
+                                        <img src="../assets/UI-face-1.jpg" alt="Member"
+                                            class="img-fluid rounded-circle w-50 p-4">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">Allen Agnes</h3>
@@ -311,7 +313,8 @@
 
                                 <div class="card mr-2 d-inline-block shadow-lg">
                                     <div class="card-img-top">
-                                        <img src="../assets/UI-face-2.jpg" alt="Member" class="img-fluid">
+                                        <img src="../assets/UI-face-2.jpg" alt="Member"
+                                            class="img-fluid rounded-circle w-50 p-4">
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">Amiel Barbara</h3>
@@ -332,7 +335,7 @@
 
                     <div class="card mr-2 d-inline-block shadow-lg">
                         <div class="card-img-top">
-                            <img src="../assets/UI-face-4.jpg" alt="Member" class="img-fluid">
+                            <img src="../assets/UI-face-4.jpg" alt="Member" class="img-fluid border-radius p-4">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">Olivia Louis</h3>
@@ -352,54 +355,55 @@
     </main>
 
     <!-- footer  -->
-    <div class="container-fluid p-0">
-        <div class="row text-left">
 
-            <!-- About US -->
+    <footer>
+        <div class="container-fluid p-0">
+            <div class="row text-left">
 
-            <div class="col-md-5 col-sm-5">
-                <h4 class="text-light">About Us</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi pariatur
-                    ullam necessitatibus fugiat dignissimos.</p>
-                <p class="pt-4text-muted">Copyright 2022 All Right Reserved| Template by <span>SWATBIT</span></p>
-            </div>
+                <!-- About US -->
 
-            <!-- Newsletter -->
+                <div class="col-md-5 col-sm-5">
+                    <h4 class="text-light">About Us</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sequi
+                        pariatur
+                        ullam necessitatibus fugiat dignissimos.</p>
+                    <p class="pt-4 text-muted">Copyright ©2022 All Right Reserved| Template by <span>SWATBIT</span></p>
+                </div>
 
-            <div class="col-md-5 col-sm-12">
-                <h4 class="text-light">Newsletter</h4>
-                <p class="text-muted">Stay Updated</p>
-                <form class="form-inline">
-                    <div class="col pl-0">
-                        <div class="input-group pr-5">
-                            <input type="text" class="form-control bg-dark text-white" placeholder="Email">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <i class="fas fa-arrow-right"></i>
+                <!-- Newsletter -->
+
+                <div class="col-md-5 col-sm-12">
+                    <h4 class="text-light">Newsletter</h4>
+                    <p class="text-muted">Stay Updated</p>
+                    <form class="form-inline">
+                        <div class="col pl-0">
+                            <div class="input-group pr-5">
+                                <input type="text" class="form-control bg-dark text-white" placeholder="Email">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-arrow-right fa-2x"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                    </form>
+                </div>
+
+                <!-- Follow Us -->
+
+                <div class="col-md-2 col-sm-12">
+                    <h4 class="text-light">Follow Us</h4>
+                    <p class="text-muted">Let us be social</p>
+                    <div class="column">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-youtube"></i>
+
                     </div>
-                </form>
-            </div>
-
-            <!-- Follow Us -->
-
-            <div class="col-md-2 col-sm-12">
-                <h4 class="text-light">Follow Us</h4>
-                <p class="text-muted">Let us be social</p>
-                <div class="column">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-youtube"></i>
-
                 </div>
             </div>
         </div>
-    </div>
-    <footer>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
